cli/tests/snapshots/cli__run_images@underlay_align3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underlay_align3.py
---
<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 0 0 L 50 0 L 50 50 L 0 50 Z" fill="rgba(46, 139, 87, 1.0)" fill-opacity="0.25" />
        <path d="M 0 5 L 40 5 L 40 45 L 0 45 Z" fill="rgba(46, 139, 87, 1.0)" fill-opacity="0.25" />
      </g>
      <path d="M 0 10 L 30 10 L 30 40 L 0 40 Z" fill="rgba(46, 139, 87, 1.0)" fill-opacity="0.25" />
    </g>
    <path d="M 0 15 L 20 15 L 20 35 L 0 35 Z" fill="rgba(46, 139, 87, 1.0)" fill-opacity="0.25" />
  </g>
</svg>
