cli/tests/snapshots/cli__run_images@underlay_align_offset1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underlay_align_offset1.py
---
<svg width="137" height="137" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 53.137515 126.27503 L 6.18034 92.158645 L 6.18034 34.116385 L 53.137515 0 L 108.338985 17.936045 L 126.27503 73.137515 L 92.158645 120.09469 L 34.116385 120.09469 L 0 73.137515 L 17.936045 17.936045 L 73.137515 0 L 120.09469 34.116385 L 120.09469 92.158645 L 73.137515 126.27503 L 17.936045 108.338985 L 0 53.137515 L 34.116385 6.18034 L 92.158645 6.18034 L 126.27503 53.137515 L 108.338985 108.338985 Z" fill="rgba(0, 0, 128, 1.0)" />
    <path d="M 136.27503 106.27503 A 30 30 0 0 1 76.27503 106.27503 A 30 30 0 0 1 136.27503 106.27503 Z" fill="rgba(100, 149, 237, 1.0)" />
  </g>
</svg>
