cli/tests/snapshots/cli__run_images@underlay_align_offset2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underrlay_align_offset1.py
---
<svg width="137.0" height="137.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 53.13751514675043 126.27503029350086 L 6.18033988749896 92.15864547265352 L 6.180339887498938 34.1163848208474 L 53.13751514675043 7.105427357601002e-15 L 108.33898536015245 17.936044933348406 L 126.27503029350088 73.13751514675042 L 92.15864547265352 120.09469040600192 L 34.11638482084737 120.09469040600192 L 7.105427357601002e-15 73.13751514675045 L 17.936044933348406 17.93604493334842 L 73.13751514675043 0.0 L 120.09469040600192 34.11638482084736 L 120.0946904060019 92.15864547265355 L 73.13751514675046 126.27503029350086 L 17.93604493334842 108.33898536015246 L 0.0 53.137515146750445 L 34.11638482084736 6.18033988749896 L 92.1586454726535 6.1803398874989455 L 126.27503029350086 53.137515146750424 L 108.33898536015252 108.3389853601524 Z" fill="rgba(0, 0, 128, 1.0)" />
    <path d="M 136.2750302935009 106.27503029350086 A 30.0 30.0 0.0 0 1 76.27503029350088 106.27503029350086 A 30.0 30.0 0.0 0 1 136.2750302935009 106.27503029350086 Z" fill="rgba(100, 149, 237, 1.0)" />
  </g>
</svg>
