cli/tests/snapshots/cli__run_images@underlay_offset2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underlay_offset2.py
---
<svg width="80" height="80" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 80 40 A 40 40 0 0 1 0 40 A 40 40 0 0 1 80 40 Z" fill="rgba(128, 128, 128, 1.0)" />
    <g>
      <path d="M 65 30 A 10 10 0 0 1 45 30 A 10 10 0 0 1 65 30 Z" fill="rgba(0, 0, 128, 1.0)" />
      <path d="M 35 30 A 10 10 0 0 1 15 30 A 10 10 0 0 1 35 30 Z" fill="rgba(0, 0, 128, 1.0)" />
    </g>
  </g>
</svg>
