cli/tests/snapshots/cli__run_images@underlay_variadic1.py.snap
---
source: cli/tests/cli.rs
assertion_line: 433
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underlay_variadic1.py
---
<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 0 0 L 50 0 L 50 50 L 0 50 Z" fill="rgba(128, 128, 128, 1.0)" fill-opacity="0.4" />
        <path d="M 10 10 L 50 10 L 50 50 L 10 50 Z" fill="rgba(128, 128, 128, 1.0)" fill-opacity="0.4" />
      </g>
      <path d="M 20 20 L 50 20 L 50 50 L 20 50 Z" fill="rgba(128, 128, 128, 1.0)" fill-opacity="0.4" />
    </g>
    <path d="M 30 30 L 50 30 L 50 50 L 30 50 Z" fill="rgba(128, 128, 128, 1.0)" fill-opacity="0.4" />
  </g>
</svg>
