cli/tests/snapshots/cli__run_images@underlay_xy4.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/underlay_xy4.py
---
<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <path d="M 40 20 A 20 20 0 0 1 0 20 A 20 20 0 0 1 40 20 Z" fill="rgba(211, 211, 211, 1.0)" />
      <path d="M 20 20 A 5 5 0 0 1 10 20 A 5 5 0 0 1 20 20 Z" fill="rgba(34, 139, 34, 1.0)" />
    </g>
    <path d="M 30 20 A 5 5 0 0 1 20 20 A 5 5 0 0 1 30 20 Z" fill="rgba(34, 139, 34, 1.0)" />
  </g>
</svg>
