cli/tests/snapshots/cli__run_images@wedge1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/wedge1.py
---
<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0 40 L 40 40 A 40 40 0 0 0 0 0 Z" fill="rgba(255, 0, 0, 1.0)" />
</svg>
